tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_32.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := 200;
  (* error *)  y := 2;
               x := ((z MOD ((0 * x) DIV (200 + x))) DIV ((+ 0) MOD (z * (1 + 1))));
               x := 200;
               q := q;
               q := p;
               p := q;
               p := p;
               p := (~ ((2 >= (2 DIV 1223)) OR (200 > (1 - 1))));
               r := (((200 + 200) * (0 DIV 0)) > (+ x))
END Test12.